# AppTheory

./: .gitignore  .golangci-v2.yml  .release-please-manifest.premain.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  ENUMERATED-CHANGES-improvement-program.md  IMPROVEMENTS.md  LINEAR-PROJECT-improvement-program.md  Makefile  README.md  ROADMAP-improvement-program.md  SCOPED-NEED-improvement-program.md  THEORY_CLOUD.md  UPGRADING.md  VERSION  apptheory.go  apptheory_test.go  aws_apigw_proxy.go  aws_eventsources.go  aws_http.go  aws_websockets.go  clock.go  context.go  error_constants.go  errors.go  go.mod  go.sum  html.go  id.go  llms.txt  middleware.go  middleware_test.go  observability.go  policy.go  release-please-config.json  release-please-config.premain.json  request.go  response.go  router.go  (+4 more)
.github/: CODEOWNERS  pull_request_template.md
api-snapshots/: README.md  go.txt  py.txt  ts.txt
cdk/: .gitignore  .jsii  .npmignore  README.md  package-lock.json  package.json  requirements-build.txt
cdk-go/: README.md  bindings_test.go  go.mod  go.sum
contract-tests/: README.md
docs/: Gemfile  README.md  _concepts.yaml  _config.yml  _contract.yaml  _decisions.yaml  _patterns.yaml  agentcore-mcp.md  api-reference.md  core-patterns.md  dependency-automation.md  development-guidelines.md  getting-started.md  index.html  jobs-ledger.md  mcp.md  migration-guide.md  release-process.md  remote-mcp-autheory.md  remote-mcp.md  sanitization.md  testing-guide.md  troubleshooting.md
examples/: README.md
gov-infra/: AGENTS.md  README.md  pack.json
py/: README.md  pyproject.toml  requirements-build.txt  requirements-lint.txt
py/docs/: README.md  _concepts.yaml  _contract.yaml  _decisions.yaml  _patterns.yaml  api-reference.md  core-patterns.md  development-guidelines.md  getting-started.md  migration-guide.md  testing-guide.md  troubleshooting.md
py/src/apptheory/: __init__.py  _safe_log.py  app.py  aws_events.py  aws_http.py  bind_handler.py  cache.py  clock.py  cloudfront.py  context.py  emf.py  errors.py  event_workloads.py  ids.py  jobs.py  kinesis_cloudwatch_logs.py  kinesis_producer.py  logger.py  logging_profile.py  microvm.py  middleware.py  naming.py  objectstore.py  openapi.py  request.py  response.py  router.py  sanitization.py  source_provenance.py  sse.py  streamer.py  testkit.py  trace_context.py  util.py  validate.py  vectorstore.py
py/src/apptheory.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
py/src/apptheory/limited/: __init__.py  dynamodb.py  errors.py  limiter.py  models.py  strategies.py  types.py
py/src/apptheory/mcp/: __init__.py
py/src/apptheory/microvm/: __init__.py  aws_provider.py  contracts.py  controller.py  fake.py  foundation.py  model.py  registry.py  session.py  shared.py
py/src/apptheory/oauth/: __init__.py
py/tests/: test_app.py  test_aws_events.py  test_aws_http.py  test_bind_handler.py  test_cloudfront.py  test_errors.py  test_event_workloads.py  test_jobs.py  test_kinesis_cloudwatch_logs.py  test_kinesis_producer.py  test_limited.py  test_logger.py  test_logging_profile.py  test_mcp.py  test_microvm.py  test_middleware.py  test_oauth.py  test_objectstore.py  test_openapi.py  test_sanitization.py  test_streamer.py  test_testkit.py  test_trace_context.py  test_util.py  test_vectorstore.py
runtime/: apptheory.go  apptheory_options_test.go  apptheory_test.go  auth.go  auth_test.go  aws_alb.go  aws_alb_test.go  aws_apigw_proxy.go  aws_apigw_proxy_test.go  aws_appsync.go  aws_appsync_test.go  aws_batch.go  aws_dynamodb.go  aws_event_context.go  aws_eventbridge.go  aws_eventsources.go  aws_eventsources_additional_test.go  aws_eventsources_coverage_test.go  aws_eventsources_more_test.go  aws_eventsources_test.go  aws_http.go  aws_http_test.go  aws_kinesis.go  aws_lambda_dispatch.go  aws_sns.go  aws_sqs.go  aws_stepfunctions.go  aws_stepfunctions_test.go  aws_websockets.go  aws_websockets_additional_test.go  cache.go  (+64 more)
(+1625 files in other folders)
