[build-system]
requires = ["setuptools>=75", "wheel>=0.44"]
build-backend = "setuptools.build_meta"

[project]
name = "apptheory"
version = "1.15.2"
requires-python = ">=3.12"
description = "AppTheory — multi-language serverless application framework (Python package)"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
  "tabletheory-py @ https://github.com/theory-cloud/TableTheory/releases/download/v2.0.0/tabletheory_py-2.0.0-py3-none-any.whl#sha256=0a5859bdd33213715074b547cfd362698d6c1496c749a4ea6f31f84427dd03e4",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
apptheory = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  # Core correctness
  "E",
  "F",
  "I",

  # Bug + security surface
  "B",
  "BLE",
  "S",

  # Modernize + simplify
  "UP",
  "C4",
  "SIM",
  "PIE",

  # Performance + Ruff-specific hygiene
  "PERF",
  "RUF",

  # Complexity
  "C90",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src/apptheory"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
